<resources>
    <string name="app_name">Calculomatic</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
	<string name="hint_username">Username</string>
	<string name="hint_password">Password</string>
	<string name="full_name">Full Name</string>
	<string name="email">Email</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="add_event">Add Event</string>
	<string name="event_name">Event Name</string>
	<string name="create_event">Create Event</string>
	<string name="event_place">Place</string>
	<string name="event_date">Date</string>
	<string name="empty"></string>
	<string name="add_contributor">Add Contributor</string>
	<string name="add_participant">Add Participant</string>
	<string name="contributor_text">List of Contributors</string>
	<string name="participant_text">List of Participants</string>
	<string name="amount">Amount(in Rs.)</string>
	<string name="list_events">List Events</string>
	<string name="list_expenses">List Expenses</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="expenseList">List of Expenses</string>
	<string name="eventsList">List of Events</string>
	<string name="usersList">List of Users</string>
	<string name="notify_all">Notify All</string>
	<string name="contact_num">Contact Number</string>
</resources>
