   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

       <TextView
           android:id="@+id/username"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"           
           android:layout_alignParentTop="true"
           android:text="@string/username"
           android:layout_marginTop="20dp"
           android:textAppearance="?android:attr/textAppearanceLarge" />

       <TextView
           android:id="@+id/username_value"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"           
           android:layout_below="@+id/username"
           android:layout_marginTop="10dp"
           android:text="@string/empty"
           android:textAppearance="?android:attr/textAppearanceSmall" />

       <TextView
           android:id="@+id/fullname"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"                      
           android:text="@string/full_name"
           android:layout_below="@+id/username_value"
           android:layout_marginTop="20dp"
           android:textAppearance="?android:attr/textAppearanceLarge" />

       <TextView
           android:id="@+id/fullname_value"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"           
           android:layout_below="@+id/fullname"
           android:layout_marginTop="10dp"
           android:text="@string/empty"
           android:textAppearance="?android:attr/textAppearanceSmall" />
       
       <TextView
           android:id="@+id/email"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"           
           android:layout_below="@+id/fullname_value"
           android:layout_marginTop="20dp"
           android:text="@string/email"
           android:textAppearance="?android:attr/textAppearanceLarge" />

       <TextView
           android:id="@+id/email_value"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"           
           android:layout_below="@+id/email"
           android:layout_marginTop="10dp"
           android:text="@string/empty"
           android:textAppearance="?android:attr/textAppearanceSmall" />

       <Button
           android:id="@+id/listevents"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"           
           android:layout_marginBottom="50dp"
           android:layout_alignParentBottom="true"
           android:text="@string/list_events"           
           android:onClick="listEvents"/>

       <Button
           android:id="@+id/button2"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"           
           android:layout_below="@+id/button1"
           android:layout_marginTop="50dp"
           android:layout_alignParentBottom="true"
           android:text="@string/list_expenses"           
           android:onClick="listExpenses"/>

    </RelativeLayout>
